Додані бракуючі файли та висновок

--- a/measurements/phase-noise.ipynb
+++ b/measurements/phase-noise.ipynb
@@ -1,17 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Вплив Налаштувань si5351c тa Міксерів на Рівень Фазових Шумів та Спурів FobosSDR"
+    "# Вплив Налаштувань si5351c, Міксерів, USB3 кабелів та Фільтру на Рівень Фазових Шумів та Спурів FobosSDR"
    ]
   },
   {
@@ -58,23 +51,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7feb5b9817f0>"
+       "<matplotlib.legend.Legend at 0x7f8f5b74dd10>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bf422d9c6c34f47a744e3da0758e715",
+       "model_id": "e0c3424cc4de4966be0b1fe12bc58e0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,23 +145,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7feb51ec6fd0>"
+       "<matplotlib.legend.Legend at 0x7f8f5b7d11d0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17ca24a34c064729b05d85a81e42191f",
+       "model_id": "657e219221094f32825ea93939edaaea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -250,23 +243,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7feb537c3110>"
+       "<matplotlib.legend.Legend at 0x7f8f5b643250>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffae0b1396574e9a9988f34c331c7fb5",
+       "model_id": "86c85418222d44bc9a9e4976d74b8417",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,23 +336,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7feb51e1d1d0>"
+       "<matplotlib.legend.Legend at 0x7f8f5b6a1090>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23e80888d63d48d19df80720b95ed032",
+       "model_id": "f0f01195d5ee4b22bf9c5b21239ab1d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,24 +423,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Данні"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f8f5b80b750>"
+       "<matplotlib.legend.Legend at 0x7f8f5b6fae90>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d500d01bdfb147739ad8c29a3700ba30",
+       "model_id": "4a1fc3a2bc5c48b4a7d2f8ce1e370d3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -495,6 +495,15 @@
     "plt.xlabel(\"Частота (Гц)\")\n",
     "\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Висновок\n",
+    "\n",
+    "Порівняно зі стоковим кабелем FobosSDR, суттєвого впливу типу USB3 кабеля та наявності USB3 фільтру на рівень власних шумів не виявлено. "
    ]
   }
  ],
